# Grouper

./: .gitignore  Grouper tutorial.md  Grouper.spec  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  README.md  docker-compose.yaml
src/grouper/: __init__.py  app.py  config.py  logic.py  styling.py  web_app.py
src/grouper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
x86_64/: README.md  build_windows.bat
x86_64/assets/: styles.css
