[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grouper"
version = "2025.10.30"
description = "Student-to-teacher random grouper with GUI"
authors = [ { name = "黄伟斌" } ]
readme = "AGENTS.md"
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "openpyxl>=3.1",
    "Flask>=3.0",
]

[project.scripts]
grouper = "grouper.app:main"
grouper-web = "grouper.web_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
